# comem-agent-research

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
CoMEM-Agent-Inference/: run.py  run_chunks.py
CoMEM-Agent-Inference/MMInA_evaluation/: test_runner.py
CoMEM-Agent-Inference/Mind2Web_evaluation/: test_runner.py
CoMEM-Agent-Inference/agent/: __init__.py  agent.py  controller.py  llm_config.py
CoMEM-Agent-Inference/browser_env/: action_parser_ground.py  envs.py  page_stability.py
CoMEM-Agent-Inference/config/: argument_parser.py
CoMEM-Agent-Inference/data_preparation/: prepare_inference_data_memory.py  prepare_training_data_onfly.py
CoMEM-Agent-Inference/memory/: continuous_processor.py  experience_memory.py  runtime.py
CoMEM-Agent-Inference/utils/: __init__.py  action_retry.py  early_stop.py  error_classifier.py  metrics_tracker.py  session_monitor.py  training_data_collector.py
CoMEM-Agent-Inference/webvoyager_evaluation/: test_runner.py
CoMEM-Agent-train/src_agent/training/: data.py  params.py  qwenVL_compressor.py  qwenVL_inference.py
tests/: test_agent_memory_modes.py  test_argument_parser.py  test_controller.py  test_memory_runtime.py
